Bug 54486 - [4.6 Regression] Spurious printf format warning mentions nonexistent type 'sizetype'
Summary: [4.6 Regression] Spurious printf format warning mentions nonexistent type 'si...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.7.0
: P2 normal
Target Milestone: 4.6.4
Assignee: Jakub Jelinek
URL:
Keywords: diagnostic
Depends on:
Blocks:
 
Reported: 2012-09-05 00:27 UTC by Keith Thompson
Modified: 2013-04-03 18:18 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2012-09-05 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Keith Thompson 2012-09-05 00:27:38 UTC
printf's "%zu" format expects an argument of type size_t.  In the sample program, the corresponding argument is of type size_t in all the printf calls (the first because strspn() is defined to return a size_t result, and the second because of the explicit cast, and similarly for the others).

For a call to strlen() or to a user-defined function func(), gcc rightly does not complain.

For a call to strspn(), even with an explicit cast, gcc incorrectly complains that the arguments is of type ‘sizetype’ -- which, as far as I can tell, doesn't exist.  (If I try to add a variable definition of type ‘sizetype’, I get "error: unknown type name ‘sizetype’", and I can find no reference to ‘sizetype’ in any of my system's headers.)

I see nothing unusual in the declaration of strspn() in /usr/include/string.h.

$ uname -a 
Linux kvetch 3.2.0-29-generic-pae #46-Ubuntu SMP Fri Jul 27 17:25:43 UTC 2012 i686 i686 i386 GNU/Linux
$ cat /etc/lsb-release 
DISTRIB_ID=Ubuntu
DISTRIB_RELEASE=12.10
DISTRIB_CODENAME=quantal
DISTRIB_DESCRIPTION="Ubuntu quantal (development branch)"
$ gcc --version
gcc (Ubuntu/Linaro 4.7.0-7ubuntu3) 4.7.0
Copyright (C) 2012 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

$ cat c.c
#include <string.h>
#include <stdio.h>

extern size_t func(void);

int main(void) {
    printf("%zu\n",         strspn("abc", "abcdefg")); /* line 7 */
    printf("%zu\n", (size_t)strspn("abc", "abcdefg")); /* line 8 */
    printf("%zu\n",         strlen("foo"));
    printf("%zu\n", (size_t)strlen("foo"));
    printf("%zu\n",         func());
    printf("%zu\n", (size_t)func());
    return 0;               
}                           
$ gcc -c -std=c99 -pedantic c.c
c.c: In function ‘main’:    
c.c:7:5: warning: format ‘%zu’ expects argument of type ‘size_t’, but argument 2 has type ‘sizetype’ [-Wformat]
c.c:8:5: warning: format ‘%zu’ expects argument of type ‘size_t’, but argument 2 has type ‘sizetype’ [-Wformat]
$
Comment 1 Marek Polacek 2012-09-05 06:04:58 UTC
It is also needed to use -Wall.  Both arguments to strspn () are constants, so in this case the __builtin_strspn () is used.  You shouldn't see this warning with -fno-builtin-strspn.  Thus <string.h> is correct in this regard.

GCC 4.[1-5] are without warnings, with 4.6 I get:
/home/marek/rh/tests/pr54486.c: In function ‘main’:
/home/marek/rh/tests/pr54486.c:7:5: warning: format ‘%zu’ expects argument of type ‘size_t’, but argument 2 has type ‘long unsigned int’ [-Wformat]
/home/marek/rh/tests/pr54486.c:8:5: warning: format ‘%zu’ expects argument of type ‘size_t’, but argument 2 has type ‘long unsigned int’ [-Wformat]

with 4.7/trunk:
/home/marek/rh/tests/pr54486.c: In function ‘main’:
/home/marek/rh/tests/pr54486.c:7:5: warning: format ‘%zu’ expects argument of type ‘size_t’, but argument 2 has type ‘sizetype’ [-Wformat]
/home/marek/rh/tests/pr54486.c:8:5: warning: format ‘%zu’ expects argument of type ‘size_t’, but argument 2 has type ‘sizetype’ [-Wformat
Comment 2 Andrew Pinski 2012-09-05 06:13:29 UTC
Confirmed.
Here is a shorter testcase that explicitly uses the builtins:
#include <stdio.h>

int main(void) {
    __builtin_printf("%zu\n",         __builtin_strspn("abc", "abcdefg")); /* line 7 */
    __builtin_printf("%zu\n", (size_t)__builtin_strspn("abc", "abcdefg")); /* line 8 */
    __builtin_printf("%zu\n",         __builtin_strlen("abc")); /* line 9 */
    return 0;               
}
Comment 3 Jakub Jelinek 2012-09-05 07:12:53 UTC
Likely caused by http://gcc.gnu.org/viewcvs?view=revision&revision=163994
(too lazy to narrow it down from r163926 - r164000 range).
Comment 4 Jakub Jelinek 2012-09-05 16:28:27 UTC
Author: jakub
Date: Wed Sep  5 16:27:55 2012
New Revision: 190986

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=190986
Log:
	PR middle-end/54486
	* builtins.c (fold_builtin_strspn, fold_builtin_strcspn): Use
	build_int_cst with size_type_node instead of size_int.

	* c-c++-common/pr54486.c: New test.

Added:
    trunk/gcc/testsuite/c-c++-common/pr54486.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/builtins.c
    trunk/gcc/testsuite/ChangeLog
Comment 5 Jakub Jelinek 2012-09-05 16:29:49 UTC
Author: jakub
Date: Wed Sep  5 16:29:42 2012
New Revision: 190987

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=190987
Log:
	PR middle-end/54486
	* builtins.c (fold_builtin_strspn, fold_builtin_strcspn): Use
	build_int_cst with size_type_node instead of size_int.

	* c-c++-common/pr54486.c: New test.

Added:
    branches/gcc-4_7-branch/gcc/testsuite/c-c++-common/pr54486.c
Modified:
    branches/gcc-4_7-branch/gcc/ChangeLog
    branches/gcc-4_7-branch/gcc/builtins.c
    branches/gcc-4_7-branch/gcc/testsuite/ChangeLog
Comment 6 Jakub Jelinek 2013-04-03 18:18:54 UTC
Author: jakub
Date: Wed Apr  3 17:57:32 2013
New Revision: 197444

URL: http://gcc.gnu.org/viewcvs?rev=197444&root=gcc&view=rev
Log:
	Backported from mainline
	2012-09-05  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/54486
	* builtins.c (fold_builtin_strspn, fold_builtin_strcspn): Use
	build_int_cst with size_type_node instead of size_int.

	* c-c++-common/pr54486.c: New test.

Added:
    branches/gcc-4_6-branch/gcc/testsuite/c-c++-common/pr54486.c
Modified:
    branches/gcc-4_6-branch/gcc/ChangeLog
    branches/gcc-4_6-branch/gcc/builtins.c
    branches/gcc-4_6-branch/gcc/testsuite/ChangeLog