re PR middle-end/54486 (Spurious printf format warning mentions nonexistent type 'sizetype')

PR middle-end/54486
	* builtins.c (fold_builtin_strspn, fold_builtin_strcspn): Use
	build_int_cst with size_type_node instead of size_int.

	* c-c++-common/pr54486.c: New test.

From-SVN: r190987